@@ -32,6 +32,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #3299: Fix possible crash in the _sre module when given bad
+  argument values in debug mode.  Patch by Victor Stinner.
+
 - Issue #7703: Add support for the new buffer API to functions of the
   binascii module.  Backported from py3k by Florent Xicluna, with some
   additional tests.
